Try flooring instead of rounding

--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@ const convert = source => {
           sv.time += (((sv.index - currentIndex) * 60) / (currentBpm * RESOLUTION));
 
           if (sv.resetBPM) {
-            timingPoints += `\n${Math.round(sv.time * 1000)},${1000/(currentBpm/60)},4,1,0,50,1,0`;
+            timingPoints += `\n${Math.floor(sv.time * 1000)},${1000/(currentBpm/60)},4,1,0,50,1,0`;
           } else if (sv.bpm) {
-            timingPoints += `\n${Math.round(sv.time * 1000)},${1000/(sv.bpm/60)},4,1,0,50,1,0`;
+            timingPoints += `\n${Math.floor(sv.time * 1000)},${1000/(sv.bpm/60)},4,1,0,50,1,0`;
           } else {
             // Example SV timing point: 947 ,-1000,4               ,1               ,0,100          ,0,0
             //                          time value something sample something sample ? sample volume ? ?
-            timingPoints += `\n${Math.round(sv.time * 1000)},-${100/sv.multiplier},4,1,0,50,0,0`;
+            timingPoints += `\n${Math.floor(sv.time * 1000)},-${100/sv.multiplier},4,1,0,50,0,0`;
           }
         }
       });
@@ -242,7 +242,7 @@ const convert = source => {
     currentBpm = bpm;
     // The first BPM marker is usually for offset purposes, so it isn't needed
     if (index > 0) {
-      timingPoints += `\n${Math.round(time * 1000)},${1000/(bpm/60)},4,1,0,50,1,0`;
+      timingPoints += `\n${Math.floor(time * 1000)},${1000/(bpm/60)},4,1,0,50,1,0`;
     }
   });
 
@@ -263,13 +263,13 @@ const convert = source => {
       sv.time += (((sv.index - currentIndex) * 60) / (currentBpm * RESOLUTION));
 
       if (sv.resetBPM) {
-        timingPoints += `\n${Math.round(Math.round(sv.time * 1000))},${1000/(currentBpm/60)},4,1,0,50,1,0`;
+        timingPoints += `\n${Math.floor(sv.time * 1000)},${1000/(currentBpm/60)},4,1,0,50,1,0`;
       } else if (sv.bpm) {
-        timingPoints += `\n${Math.round(Math.round(sv.time * 1000))},${1000/(sv.bpm/60)},4,1,0,50,1,0`;
+        timingPoints += `\n${Math.floor(sv.time * 1000)},${1000/(sv.bpm/60)},4,1,0,50,1,0`;
       } else {
         // Example SV timing point: 947 ,-1000,4               ,1               ,0,100          ,0,0
         //                          time value something sample something sample ? sample volume ? ?
-        timingPoints += `\n${Math.round(Math.round(sv.time * 1000))},-${100/sv.multiplier},4,1,0,50,0,0`;
+        timingPoints += `\n${Math.floor(sv.time * 1000)},-${100/sv.multiplier},4,1,0,50,0,0`;
       }
     }
   });
@@ -280,7 +280,7 @@ const convert = source => {
     timeEnd,
     noteType
   }) => {
-    txt += `\n${osuNote},192,${(Math.round(time * 1000))},${noteType},0,${timeEnd > 0 ? `${(Math.round(timeEnd * 1000))}:` : ''}0:0:0:0`;
+    txt += `\n${osuNote},192,${(Math.floor(time * 1000))},${noteType},0,${timeEnd > 0 ? `${(Math.floor(timeEnd * 1000))}:` : ''}0:0:0:0`;
   });
 
   return `[TimingPoints]${timingPoints}\n\n[HitObjects]${txt}`;
